[gd_scene load_steps=2 format=3 uid="uid://clgnqer6fqhds"]

[ext_resource type="Script" uid="uid://bgsdw2c2l0h41" path="res://ui/MinesPanel.gd" id="1_v03is"]

[node name="MinesPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v03is")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Souls to bind"

[node name="SoulAmount" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
min_value = 1.0
value = 1.0

[node name="BindButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Bind"

[node name="BoundLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Bound souls: 0"
